@@ -47,6 +47,7 @@ All:
 - Specialize std::hash<> for wxString when using C++11.
 - Allow recursive calls to wxYield().
 - Add wxART_FULL_SCREEN standard bitmap (Igor Korot).
+- Fix wxStringTokenizer copy ctor and assignment operator.
 
 Unix:
 
